force-app/main/default/objects/Application_Document__c/Application_Document__c.object-meta.xml
<CustomObject>
    <label>Application Document</label>
    <nameField>
        <displayFormat>DOC-{00000}</displayFormat>
        <label>Application Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>