force-app/main/default/objects/Application_Document__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Application Documents</relationshipLabel>
    <relationshipName>Application_Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>