force-app/main/default/objects/Application_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ID Proof</fullName>
            </value>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>Previous Employment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>